tests/ui/unit-struct.stderr
error: TypeStateBuilder does not support unit structs
 --> tests/ui/unit-struct.rs:5:1
  |
5 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `UnitStruct` in the current scope
 --> tests/ui/unit-struct.rs:8:33
  |
5 | struct UnitStruct;
  | ----------------- function or associated item `builder` not found for this struct
...
8 |     let _instance = UnitStruct::builder()
  |                                 ^^^^^^^ function or associated item not found in `UnitStruct`
